--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl: ''
 title: 'My website'
 description: 'This is my new website'
 permalink: pretty
-logo: 'bear-modified.png'
+logo: 'bear-modified.jpg'
 
 # Pagination
 paginate: 5
