--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ baseurl: ''
 title: 'My website'
 description: 'This is my new website'
 permalink: pretty
-logo: "https://i.imgur.com/iwc8jKi.jpg"
+logo: "/assets/images/bear-modified.jpg"
+# "https://i.imgur.com/iwc8jKi.jpg"
 # "{{ site.baseurl }}/assets/images/bear-modified.jpg"
 
 # Pagination
