--- a/_config.yml
+++ b/_config.yml
@@ -51,9 +51,9 @@ collections:
   posts:
     title: Posts
     output: true
-    description: "My thoughts and ideas"
+    description: "Homework blogs"
     feature_text: |
-      Welcome to my blog
+      DATA 440 - Capstone Projects in Data Apps
     feature_image: "https://picsum.photos/2560/600?image=866"
 
 # Collection settings
